# alchemy_2025

./: .gitignore  Dockerfile  README.md  app.py  backend_functions.py  example_api_response.json  loan_application.py  main.py  pyproject.toml  requirements.txt  test_api.py  test_post.py
backend/: Dockerfile  README.md  app.py  backend_functions.py  pyproject.toml  test_api.py
backend/bq/: schema.json
backend/doc_agent/: agents.py  helper_functions.py  runners.py
backend/static/: .last_build_id  main.dart.js  manifest.json  version.json
backend/static/assets/: AssetManifest.json  NOTICES
backend/templates/: index.html
doc_agent/: agent.py  agents.py  helper_functions.py  runners.py
doc_agent/tools/: doc_tools.py
frontend/: .gitignore  README.md  pubspec.yaml
frontend/firebase/functions/: package.json
frontend/lib/: app_state.dart  index.dart  main.dart
frontend/lib/components/: a_i_agents_comp_model.dart  a_i_agents_comp_widget.dart  a_i_agents_model.dart  a_i_agents_widget.dart  document_text_model.dart  document_text_widget.dart  final_response_tab_model.dart  final_response_tab_widget.dart  loading_component_model.dart  loading_component_widget.dart  login_tab_model.dart  login_tab_widget.dart  user_details2_model.dart  user_details2_widget.dart  user_details_copy_model.dart  user_details_copy_widget.dart  user_details_model.dart  user_details_widget.dart
frontend/lib/flutter_flow/: upload_data.dart  (+1 more)
frontend/test/: widget_test.dart
frontend/web/: index.html
templates/: index.html
terraform/: main.tf  outputs.tf  provider.tf  variables.tf
(+16 files in other folders)
