[project]
name = "alchemy"
version = "0.1.0"
description = "Loan Application Project with Alchemy"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.2.1",
    "deprecated>=1.2.18",
    "google-adk>=0.4.0",
    "google-cloud-logging>=3.12.1",
    "jinja2>=3.1.6",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "isort>=6.0.1",
]
